tests/neg/hklower2.scala
class Test { // error: conflicting bounds
  trait T[X]
  type Z[X] >: String <: T[X]
}
